# trolo

./: .gitignore  404.html  README.md  index.html  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: tests.yml
assets/js/: 0e384e19.7402e02e.js  0e384e19.8ab6a38e.js  1df93b7f.60e79de8.js  1df93b7f.6cf04db9.js  1df93b7f.b0187bc5.js  22dd74f7.731b7e6d.js  2a934f7c.24b5ccef.js  2a934f7c.93d27693.js  393be207.ceb46ac5.js  62323a43.7e7bb230.js  62323a43.be478ef4.js  63eaeac9.409d8e6c.js  aa48c254.109f2114.js  aa48c254.63b54b98.js  c4ad11b4.6e698280.js  c4ad11b4.c1c8e8e9.js  main.009a6290.js  main.1e4d5f3d.js  runtime~main.174e5269.js  runtime~main.5ad502d9.js  runtime~main.acdcde29.js  runtime~main.cf843eca.js
docker/: .dockerignore  Dockerfile.python
docs/: docusaurus.config.ts  package-lock.json  sidebars.js
docs/docs/: intro.md
docs/docs/features/: inference.md  training.md
docs/docs/models/: d-fine.md  index.md
docs/src/pages/: index.tsx
features/inference/: index.html
features/training/: index.html
intro/: index.html
markdown-page/: index.html
models/: index.html
models/d-fine/: index.html
recipes/: count_objects_crossing_the_line.ipynb  object_tracking.ipynb  serialize_detections_to_csv.ipynb
recipes/deployment/: onnx_inference.py  openvino_inference.py
recipes/people_line_counter/: README.md  line_counter.py
recipes/trolo_with_sam/: README.md  trolo_sam.ipynb  trolo_sam.py
tests/: test_det_infer.py  test_det_train.py  test_dummy_coco.py  test_export.py  test_logger.py
trolo/: __init__.py  infer.py  train.py  visualize.py
trolo/cli/: cli.py
trolo/data/: dataloader.py
trolo/eval/: detection.py
trolo/export/: __init__.py  base.py  exporter.py
trolo/exporter/: __init__.py  det_exporter.py
trolo/inference/: base.py  detection.py  video.py
trolo/loaders/: _config.py  maps.py  registry.py  yaml_config.py  yaml_utils.py
trolo/models/: __init__.py
trolo/modules/: __init__.py
trolo/trainers/: __init__.py  base.py  clas_engine.py  clas_trainer.py  classification.py  det_engine.py  det_solver.py  detection.py
trolo/utils/: __init__.py  assets.py  box_ops.py  dist_utils.py  draw_utils.py  dummy_data.py  image_utils.py  logger.py  profiler_utils.py  smart_defaults.py
(+57 files in other folders)
