[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trolo"
version = "0.1.2"
description = "CLI tool for D-FINE model training and inference"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "torch>=2.0.0",
    "torchvision",
    "onnxruntime",
    "PyYAML",
    "opencv-python",
    "Pillow",
    "pycocotools",
    "tensorboard",
    "faster_coco_eval",
    "calflops",
    "transformers",
    "scipy",
    "wandb",
    "numpy<=1.26.4"
]

[project.optional-dependencies]

dev = [
    "ruff>=0.6.1",
    "pytest"
]

[project.scripts]
trolo = "trolo.cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trolo*"]

[tool.setuptools.package-data]
trolo = [
    "configs/**/*.yml", 
    "configs/**/*.yaml",
    "utils/scripts/**/*.sh"
]

[tool.ruff]
line-length = 120

exclude = [
    "recipes/",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false