[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trolo"
version = "0.1.31"
description = "A framework for harnessing the power of transformers with YOLO models and other single-shot detectors!"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "torch>=2.0.0",
    "torchvision",
    "onnxruntime",
    "PyYAML",
    "opencv-python",
    "Pillow",
    "pycocotools",
    "tensorboard",
    "faster_coco_eval",
    "calflops",
    "transformers",
    "scipy",
    "wandb",
    "numpy<=1.26.4",
    "supervision",
    "emoji",
    "colorama",
    "onnx",
    "onnxsim"
]

[project.optional-dependencies]

dev = [
    "ruff>=0.6.1",
    "pytest"
]

[project.scripts]
trolo = "trolo.cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trolo*"]

[tool.setuptools.package-data]
trolo = [
    "configs/**/*.yml", 
    "configs/**/*.yaml",
    "utils/scripts/**/*.sh",
    "data/samples/*"
]

[tool.ruff]
line-length = 120

exclude = [
    "recipes/",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false